--- a/templates/adminer/polls/polls_statistic.html
+++ b/templates/adminer/polls/polls_statistic.html
@@ -20,41 +20,54 @@
         }
     </style>
 
-    <div class="mx-auto block-info head-form">
-        <div style="background-color: white">
-            <div class="d-flex justify-content-between align-item-center">
-                <div>Статус: {{ poll.status }}</div>
-                <div>Ответов пользователей: {{ poll.answer_user }}</div>
-            </div>
-            <div class="d-flex justify-content-between align-item-center">
-                {% if poll.date_created %}
-                    <div>Дата создания: {{ poll.date_created|date:'Y-m-d H:i' }}</div>{% endif %}
-                {% if poll.date_updated %}
-                    <div>Дата обновления: {{ poll.date_updated|date:'Y-m-d H:i' }}</div>{% endif %}
-            </div>
-            <div class="d-flex justify-content-between align-item-center">
-                {% if poll.date_start %}
-                    <div>Дата начала: {{ poll.date_start|date:'Y-m-d H:i' }}</div>{% endif %}
-                {% if poll.date_end %}
-                    <div>Дата завершения: {{ poll.date_end|date:'Y-m-d H:i' }}</div>{% endif %}
-            </div>
-        </div>
-    </div>
-
     <div style="background-color: #F0EBF8">
         <div class="d-flex">
             <div class="mx-auto">
+                <br>
+                <button class="btn btn-secondary ripple-surface" onclick="window.location.href='{% url 'adminer:polls' %}'">Отмена</button>
+                <button class="btn btn-primary" id="print_pdf">Печать PDF</button>
                 <div class="head-form">
                     <div class="color-line"></div>
-                    <h1 style="color: black;">{{ poll.title }}</h1>
+                    <h1 style="color: black;" class="h_poll" data-id="{{ poll.id }}">{{ poll.title }}</h1>
                     <p>{{ poll.description }}</p>
+                </div>
+                <div class="head-form">
+                    <div class="d-flex justify-content-between align-item-center">
+                        <div>Статус: {{ poll.status }}</div>
+                        <div>Ответов пользователей: {{ poll.answer_user }}</div>
+                    </div>
+                    <div class="d-flex justify-content-between align-item-center">
+                        {% if poll.date_created %}
+                            <div>Дата создания: {{ poll.date_created|date:'Y-m-d H:i' }}</div>{% endif %}
+                        {% if poll.date_updated %}
+                            <div>Дата обновления: {{ poll.date_updated|date:'Y-m-d H:i' }}</div>{% endif %}
+                    </div>
+                    <div class="d-flex justify-content-between align-item-center">
+                        {% if poll.date_start %}
+                            <div>Дата начала: {{ poll.date_start|date:'Y-m-d H:i' }}</div>{% endif %}
+                        {% if poll.date_end %}
+                            <div>Дата завершения: {{ poll.date_end|date:'Y-m-d H:i' }}</div>{% endif %}
+                    </div>
+                </div>
+
+                <div class="head-form">
+                    <div class="form-group">
+                        <h3>Выберите категорию</h3>
+                        <select class="form-select select_category">
+                            <option value="0">Все категории</option>
+                            {% for item in list_category %}
+                                <option value="{{ item.id }}" {% if id_category == item.id %}
+                                        selected="selected" {% endif %}>{{ item.title }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
                 </div>
 
                 <div class="head-form">
                     <h3>Векторы средней оценки с учетом компетентности экспертов</h3>
                     <div>
                         <br>
-                        <table class="table">
+                        <table class="table tableS">
                             <thead>
                             <tr>
                                 <th scope="col">Показатели</th>
@@ -63,129 +76,41 @@
                                 <th scope="col">S по чебышеву</th>
                             </tr>
                             </thead>
-                            <tbody>
-                            {% for item in list_q_mark %}
-                                <tr class="tr_question">
-                                    <td class="title_question">{{ item.question.title }}</td>
-                                    <td class="s1">{{ item.s1 }}</td>
-                                    <td class="s6">{{ item.s6 }}</td>
-                                    <td class="sch">{{ item.sch }}</td>
-                                </tr>
-                            {% endfor %}
-                            </tbody>
+                            <tbody></tbody>
                         </table>
                     </div>
                     <br>
                     <div id="chart_div"></div>
                 </div>
-
                 <div class="head-form">
-                    <h3>Согласованность оценок по шкале Харрингтона: <br> <span style="color: red">{{ list_math.word }}</span></h3>
+                    <h3>Согласованность оценок по шкале Харрингтона: <br>
+                        <span style="color: red" class="math4">{{ list_math.word }}</span>
+                    </h3>
                     <br>
                 </div>
                 <div class="head-form">
-                    <h3>Согласованность оценок по шкале Пирсона: <br><span style="color: red">{{ list_math.coord }}</span></h3>
-                    <br>
-                </div>
-                <div class="head-form">
-                    <h3>Оценки по показателю 1</h3>
-                    <div id="piechart1" style="width: 100%; height: 500px;"></div>
+                    <h3>Согласованность оценок по шкале Пирсона: <br><span
+                            style="color: red" class="math5">{{ list_math.coord }}</span></h3>
                     <br>
                 </div>
                 <br><br>
             </div>
         </div>
     </div>
+    <div style="display: none" id="csrfmiddlewaretoken">{{ csrf_token }}</div>
     <script>
         $(document).ready(function () {
+
+            {% comment %} let params = (new URL(document.location)).searchParams;
+             $('.select_category').val(params.get("id_category"));{% endcomment %}
+
             $('.nav-item').removeClass('active');
             $('.nav-item').each(function () {
                 if ($(this).attr('data-name') === "polls") $(this).addClass('active')
             });
         });
     </script>
-    <script>
-        $(document).ready(function () {
-            $(".block_btn_send_form").removeClass('d-flex');
-            $(".block_btn_send_form").hide();
 
-            $('#start_poll').click(function () {
-                $.ajax({
-                    type: 'get',
-                    url: '/admin/polls/start/' + $(this).attr('data-id') + '/',
-                    success: function (response) {
-                        console.log(response);
-                        if (response === 'true') {
-                            window.location.reload();
-                        }
-                    }
-                });
-            });
-            $('#end_poll').click(function () {
-                $.ajax({
-                    type: 'get',
-                    url: '/admin/polls/end/' + $(this).attr('data-id') + '/',
-                    success: function (response) {
-                        console.log(response);
-                        if (response === 'true') {
-                            window.location.reload();
-                        }
-                    }
-                });
-            });
-
-            google.charts.load('current', {packages: ['corechart', 'bar']});
-            google.charts.setOnLoadCallback(drawChart);
-
-            function drawChart() {
-
-                let data_to_tabel = [['Показатель', 'S1', 'S6', 'Sch']];
-                $('.tr_question').each(function (){
-                    let title_question = $(this).children('td.title_question').text();
-                    let s1 = $(this).children('td.s1').text();
-                    let s6 = $(this).children('td.s6').text();
-                    let sch = $(this).children('td.sch').text();
-                    data_to_tabel.push([title_question, s1, s6, sch])
-                });
-                console.log(data_to_tabel)
-                let data = google.visualization.arrayToDataTable(data_to_tabel);
-
-                let options = {
-                    chart: {
-                        title: 'Столбчатая диаграмма',
-                    }
-                };
-
-                let chart = new google.charts.Bar(document.getElementById('chart_div'));
-                chart.draw(data, google.charts.Bar.convertOptions(options));
-            }
-
-
-        });
-    </script>
-    <script type="text/javascript">
-        google.charts.load('current', {'packages': ['corechart']});
-        google.charts.setOnLoadCallback(drawChart);
-
-        function drawChart() {
-
-            var data = google.visualization.arrayToDataTable([
-                ['Task', 'Hours per Day'],
-                ['Ответ1', 0],
-                ['Ответ2', 5],
-                ['Ответ3', 2],
-                ['Ответ4', 4],
-            ]);
-
-            var options = {
-                title: 'Ответы по показателю 1',
-                is3D: true,
-            };
-
-            var chart = new google.visualization.PieChart(document.getElementById('piechart1'));
-
-            chart.draw(data, options);
-        }
-    </script>
+    <script type="text/javascript" src="{% static 'adminer/js/stat.js' %}"></script>
 
 {% endblock %}
